refactor: code optimize

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -313,26 +313,27 @@
             //     allowClose: false
             // });
 
+            // nthTabs.addTab({
+            //     id: "bom",
+            //     title: '物料清单',
+            //     url: "/produce/bom",
+            //     allowClose: false
+            // });
+
+            // nthTabs.addTab({
+            //     id: "produce_orders",
+            //     title: '生产单',
+            //     url: "/produce_orders/new",
+            //     allowClose: false
+            // });
+
             nthTabs.addTab({
-                id: "bom",
-                title: '物料清单',
-                url: "/produce/bom",
+                id: "core_partner",
+                title: '合作伙伴',
+                url: "/reports/695710879554998272",
                 allowClose: false
             });
 
-            // nthTabs.addTab({
-            //     id: "produce_orders",
-            //     title: '生产单',
-            //     url: "/produce_orders/new",
-            //     allowClose: false
-            // });
-
-            // nthTabs.addTab({
-            //     id: "produce_orders",
-            //     title: '生产单',
-            //     url: "/produce_orders/new",
-            //     allowClose: false
-            // });
         })
     </script>
 </div>
