--- a/src/main/resources/templates/modules/partner.html
+++ b/src/main/resources/templates/modules/partner.html
@@ -159,8 +159,10 @@
 <script th:src="@{/js/editable-table-plus.js}"></script>
 
 <script th:src="@{/js/jquery.dialogInput.js}"></script>
+<script th:src="@{/js/editable-table-plus-customize_type.js}"></script>
 
 <script th:inline="javascript">
+    // 业务数据
     var readonly = [[${query.readonly}]] === 'true'
     var propertyMap = [[${formBO.propertyMap}]]
 
@@ -169,31 +171,7 @@
         value = propertyMap.sourceList.value
     }
 
-    var customizeType = {
-        'material': {
-            formatTr: function ($td, columnConfig) {
-                $td.find('input')
-                    .attr('name', 'materialCode')
-                    .attr('readonly', false)
-
-                $td.append('<input class="form-control" type="hidden" name="'+columnConfig.name+'">')
-
-                $td.delegate('input[type=text]', 'click keydown focus', function(event){
-                    // if ((event.keyCode && event.keyCode === 13) || !event.keyCode) {
-                    if ((event.keyCode && event.keyCode !== 9) || !event.keyCode) {
-                        $dialogInput.click();
-                        currentMaterialDom = this
-                    }
-
-                    if (event.keyCode !== 9 ) {
-                        event.preventDefault();
-                        return;
-                    }
-                })
-            }
-        }
-
-    }
+    // 可编辑表格初始化
     var $editableTable = $('#table-container').editableTablePlus({
         customizeType,
         showRowNumber: true, // 是否显示行号
@@ -206,13 +184,16 @@
                 title: "物料",
                 width: 100,
                 align: 'left',
-                required: false
+                required: false,
+                selected: function ($tr, row) {
+                }
             },
             {
-                type: "text",
+                // type: "text",
+                type: "label",
                 name: "materialText",
                 title: "规格",
-                disabled: true
+                // disabled: true
             },
             {
                 type: "select",
@@ -256,48 +237,7 @@
         value
     })
 
-    var $dialogInput = $('#dialogInput').dialogInput({
-        title: '选择物料',
-        reportId: '697147523487240192',
-        labelDisplay: function (row) {
-            return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
-        },
-        selected: function (row) {
-            console.log(row)
-            if ("createEvent" in document) {
-                var evt = document.createEvent("HTMLEvents");
-                evt.initEvent("input", false, true);
-                currentMaterialDom.dispatchEvent(evt);
-            }
-            else
-                currentMaterialDom.fireEvent("input");
-
-            currentMaterialDom.value = row.code
-            $(currentMaterialDom).siblings().val(row.id)
-
-            $(currentMaterialDom).parent().next().find('input[type=text]').val(this.labelDisplay(row))
-            $(currentMaterialDom).parents('tr').find(':input[name=materialCategoryId]').val(row.category_id)
-
-            setCaretPosition(currentMaterialDom, currentMaterialDom.value.length)
-        }
-    })
-
-    function setCaretPosition(ctrl, pos) {
-        // Modern browsers
-        if (ctrl.setSelectionRange) {
-            ctrl.focus();
-            ctrl.setSelectionRange(pos, pos);
-
-            // IE8 and below
-        } else if (ctrl.createTextRange) {
-            var range = ctrl.createTextRange();
-            range.collapse(true);
-            range.moveEnd('character', pos);
-            range.moveStart('character', pos);
-            range.select();
-        }
-    }
-
+    // 自定义表单
     /*<![CDATA[*/
     $(document).ready(function () {
         if (readonly) {
