refactor: editable-table-plus.js 插件优化

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -271,12 +271,12 @@
             //     allowClose: false
             // });
 
-            // nthTabs.addTab({
-            //     id: "inventory_count",
-            //     title: '盘点',
-            //     url: "/inventory/count",
-            //     allowClose: false
-            // });
+            nthTabs.addTab({
+                id: "inventory_count",
+                title: '盘点',
+                url: "/inventory/count",
+                allowClose: false
+            });
 
             // nthTabs.addTab({
             //     id: "inventory_list",
@@ -327,12 +327,12 @@
             //     allowClose: false
             // });
 
-            nthTabs.addTab({
-                id: "core_partner",
-                title: '合作伙伴',
-                url: "/reports/695710879554998272",
-                allowClose: false
-            });
+            // nthTabs.addTab({
+            //     id: "core_partner",
+            //     title: '合作伙伴',
+            //     url: "/reports/695710879554998272",
+            //     allowClose: false
+            // });
 
         })
     </script>
