--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -166,7 +166,7 @@
                     title: "规格"
                 },
                 {
-                    type: "number",
+                    type: "decimal",
                     name: "quantity",
                     title: "数量",
                     width: 100,
