--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -53,34 +53,14 @@
 
         <div class="card">
             <div class="card-body">
-                <div id="table-container">
-                    <form class="form-item" id="form-item">
-                        <div class="table-fixed-container">
-                            <table class="table-thead table-editor table table-responsive-sm table-bordered table-sm">
-                                <thead>
-                                <tr>
-                                    <th style="width: 50px">序号</th>
-                                    <th style="width: 100px;"><label class="required">物料</label></th>
-                                    <th><label>描述</label></th>
-                                    <th style="width: 100px;"><label class="required">盘点数量</label></th>
-                                    <th style="width: 100px;"><label>单位</label></th>
-                                    <th><label>备注</label></th>
-                                    <th style="width: 50px;"></th>
-                                </tr>
-                                </thead>
-                            </table>
-
-                            <table id="table" class="table-tbody table-editor table table-responsive-sm table-bordered table-sm">
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </form>
-                </div>
+                <form class="form-item" id="form-item">
+                    <div id="table-container">
+                    </div>
+                </form>
             </div>
         </div>
         <div id="dialogInput" style="display: none"></div>
-        <div id="dialogInputSingle" style="display: none"></div>
+        <div id="multipleDialogInput" style="display: none"></div>
         <div class="operator-bar text-center" id="operator-bar">
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
@@ -92,47 +72,60 @@
     <script th:src="@{/plugins/bootstrap-datepicker/js/bootstrap-datepicker.zh-CN.min.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/jquery.form2json.js}"></script>
 
-    <script th:src="@{/js/jquery.dialogInput.js}"></script>
-    <script th:src="@{/js/jquery.table.js}"></script>
     <script th:src="@{/editable-table/editable-table.js}"></script>
+    <script th:src="@{/js/jquery.table.js}"></script>
+    <script th:src="@{/js/editable-table-plus.js}"></script>
+
+    <script th:src="@{/js/jquery.dialogInput.js}"></script>
+    <script th:src="@{/js/editable-table-plus-customize_type.js}"></script>
     <script>
         let formHeader = document.getElementById('form-header');
         let formItem = document.getElementById('form-item');
 
-        let editableTableIndex = 1
-
-        let columnConfigs = [
-            {
-                type: "material_input",
-                name: "materialId",
-                required: true,
-            },
-            {
-                type: "label",
-                name: "materialText",
-            },
-            {
-                type: "number",
-                name: "quantity",
-                required: true,
-            },
-            {
-                type: "text-label",
-                name: "unit",
-                required: true,
-            },
-            {
-                type: "text",
-                name: "remark",
-            }
-        ]
+        // 可编辑表格初始化
+        let $editableTable = $('#table-container').editableTablePlus({
+            customizeType,
+            showRowNumber: true, // 是否显示行号
+            allowEmpty: false, // 表格允许为空
+            columnConfigs: [
+                {
+                    type: "material",
+                    name: "materialId",
+                    title: "物料",
+                    width: 100,
+                    required: true,
+                    mode: 'multiple', // 多选
+                },
+                {
+                    type: "label",
+                    name: "materialText",
+                    title: "规格"
+                },
+                {
+                    type: "decimal",
+                    name: "quantity",
+                    title: "数量",
+                    width: 100,
+                    align: 'right',
+                    required: true,
+                },
+                {
+                    type: "text_label",
+                    name: "unit",
+                    title: "单位",
+                    width: 100,
+                    required: true,
+                    disabled: true
+                },
+                {
+                    type: "text",
+                    name: "remark",
+                    title: "备注"
+                }
+            ]
+        })
 
         // end
-        let dialogInput = $('#dialogInput');
-        let dialogInputSingle = $('#dialogInputSingle');
-
-        var currentMaterialDom;
-
         $('#documentDate').datepicker({
             language: "zh-CN",
             autoclose: true,
@@ -141,178 +134,6 @@
             todayHighlight: true,
             format: 'yyyy-mm-dd'
         })
-
-        $('#table-container').table({fixedHead: true})
-        $('.tr-empty.non-data').remove()
-
-
-        var $editableTable = $('#table').editableTable({
-            columns: columnConfigs.length + 1,
-            addEmptyLineCallback: function ($tr) {
-                formatTr($tr)
-                rebuildIndex()
-            },
-            beforeRemoveCallback: function ($parent) {
-                // console.log($parent)
-                return true
-            },
-            afterRemoveCallback: function ($parent) {
-                // console.log($parent)
-                rebuildIndex()
-                return true
-            }
-        })
-
-        function formatTr($tr) {
-            for (let i = 0; i < columnConfigs.length; i++) {
-                let columnConfig = columnConfigs[i];
-                let childIndex = i + 2
-
-                if (columnConfig.type === 'material_input') {
-                    $tr.find('td:nth-child('+childIndex+') input')
-                        .attr('name', 'materialCode')
-                        .attr('readonly', false);
-                    $tr.find('td:nth-child('+childIndex+')').append('<input class="form-control" type="hidden" name="'+columnConfig.name+'">')
-                } else if (columnConfig.type === 'number') {
-                    $tr.find('td:nth-child('+childIndex+') input')
-                        // .attr('type', 'number')
-                        .attr('pattern', '^\\d+(\\.\\d{1,3})?$')
-                        .attr('title', '必须数字')
-                        .attr('name', columnConfig.name);
-                } else if (columnConfig.type === 'text-label') {
-                    $tr.find('td:nth-child('+childIndex+') input').attr('disabled', true).attr('readonly', true)
-                    $tr.find('td:nth-child('+childIndex+')').append('<input class="form-control" type="hidden" name="'+columnConfig.name+'">')
-                } else if (columnConfig.type === 'label') {
-                    $tr.find('td:nth-child('+childIndex+') input').attr('disabled', true).attr('readonly', true).attr('name', columnConfig.name)
-                } else if (columnConfig.type === 'text') {
-                        $tr.find('td:nth-child('+childIndex+') input').attr('name', columnConfig.name)
-                    }
-                }
-        }
-
-        function rebuildIndex() {
-            editableTableIndex = 1;
-            $('#table tbody tr').each(function () {
-                $(this).find('td:nth-child(1)').text(editableTableIndex++)
-            })
-
-            // 倒数第二个 设置 required
-            let $tr = $('#table tbody tr:last-child')
-            let $requiredTr = $tr.prev()
-            if ($requiredTr.length == 0) {
-                $requiredTr = $tr
-            }
-
-            for (let i = 0; i < columnConfigs.length; i++) {
-                let columnConfig = columnConfigs[i];
-                let childIndex = i + 2
-
-                if (columnConfig.required === true) {
-                    $requiredTr.find('td:nth-child('+childIndex+') input').attr('required', true)
-                }
-            }
-        }
-
-        $('#dialogInputSingle').dialogInput({
-            title: '选择物料',
-            reportId: '697147523487240192',
-            labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
-            },
-            selected: function (row) {
-                console.log(row)
-                if ("createEvent" in document) {
-                    var evt = document.createEvent("HTMLEvents");
-                    evt.initEvent("input", false, true);
-                    currentMaterialDom.dispatchEvent(evt);
-                }
-                else
-                    currentMaterialDom.fireEvent("input");
-
-                currentMaterialDom.value = row.code
-                setCaretPosition(currentMaterialDom, currentMaterialDom.value.length)
-
-                $(currentMaterialDom).parent().next().find('input[type=text]').val(this.labelDisplay(row))
-
-                $(currentMaterialDom).parents('tr').find('td:nth-child(5) input[type=text]').val(row.base_unit_name)
-                $(currentMaterialDom).parents('tr').find('td:nth-child(5) input[type=hidden]').val(row.base_unit)
-
-                $(currentMaterialDom).siblings().val(row.id)
-            }
-        })
-
-        $('#dialogInput').dialogInput({
-            title: '选择物料',
-            reportId: '697147523487240192',
-            mode: 'multiple', // 多选
-            labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
-            },
-            selected: function (rows) {
-                for (let row of rows) {
-                    console.log(row)
-                    $editableTable.editableTable('addEmptyLine')
-                    let $tr = $("#table tr:last-child").prev()
-
-                    $tr.find('td:nth-child(2) input[type=text]').val(row.code)
-                    $tr.find('td:nth-child(2) input[type=text]').siblings().val(row.id)
-                    $tr.find('td:nth-child(3) input[type=text]').val(this.labelDisplay(row))
-                    $tr.find('td:nth-child(5) input[type=text]').val(row.base_unit_name)
-                    $tr.find('td:nth-child(5) input[type=hidden]').val(row.base_unit)
-                }
-            }
-        })
-
-        function setCaretPosition(ctrl, pos) {
-            // Modern browsers
-            if (ctrl.setSelectionRange) {
-                ctrl.focus();
-                ctrl.setSelectionRange(pos, pos);
-
-                // IE8 and below
-            } else if (ctrl.createTextRange) {
-                var range = ctrl.createTextRange();
-                range.collapse(true);
-                range.moveEnd('character', pos);
-                range.moveStart('character', pos);
-                range.select();
-            }
-        }
-
-        // 注册事件
-        (function () {
-            for (let i = 0; i < columnConfigs.length; i++) {
-                let columnConfig = columnConfigs[i];
-                let childIndex = i + 2
-
-                if (columnConfig.type === 'material_input') {
-                    $('#table tbody').delegate('td:nth-child('+childIndex+') input[type=text]', 'click keydown focus', function(event){
-                        // if ((event.keyCode && event.keyCode === 13) || !event.keyCode) {
-                        if ((event.keyCode && event.keyCode !== 9) || !event.keyCode) {
-                            if ($(this).parents("tr").next().length) {
-                                dialogInputSingle.click();
-                                currentMaterialDom = this
-                            } else {
-                                dialogInput.click();
-                            }
-                        }
-
-                        if (event.keyCode !== 9 ) {
-                            event.preventDefault();
-                            return;
-                        }
-                    })
-
-                } else if (columnConfig.type === 'number') {
-                    $('#table tbody').delegate('td:nth-child('+childIndex+') input[type=text]', 'keydown', function(event){
-                        if ((event.keyCode > 57 || event.keyCode < 48) && event.keyCode !== 8 && event.keyCode !== 190 && event.keyCode !== 39 && event.keyCode !== 37 && event.keyCode !== 9) {
-                            event.preventDefault();
-                            return;
-                        }
-                    })
-                }
-            }
-        })()
 
         function valid() {
             var formHeaderValidity = formHeader.checkValidity()
@@ -326,59 +147,18 @@
             formHeader.classList.remove('was-validated')
             formItem.classList.remove('was-validated')
 
-            tableReset()
+            $editableTable.editableTablePlus('clear')
 
             $("form.readonly :input").prop("disabled", false);
             $("form-item #table tr:last-child").prop("disabled", false);
         }
 
-        function tableReset() {
-            $('#table tbody tr:not(:last-child)').remove()
-            rebuildIndex()
-        }
-
         function send() {
-            var params = {}
-            var items = []
-            $('#table tbody tr:not(:last-child)').each(function () {
-                var row = {}
-                $(this).find('td input[name]').each(function () {
-                    row[$(this).attr('name')] = $(this).val()
-                })
-
-                // 处理material
-                if (!row.materialId) {
-                    $(this).siblings().val('')
-                }
-
-                // 如何全部为空删除该行
-                let allEmpty = true
-                for (const [key, value] of Object.entries(row)) {
-                    if (!!value) {
-                        allEmpty = false
-                        break
-                    }
-                }
-                if (allEmpty) {
-                    $(this).remove()
-                } else {
-                    items.push(row)
-                }
-                //end
-            })
-
-            rebuildIndex()
-
-            params['itemList'] = items
-
             if (!valid()) {
                 return
             }
-
-            if (items.length == 0) {
-                toastr.error('行项目缺少物料信息');
-                return;
-            }
+            var params = {}
+            params['itemList'] = $editableTable.editableTablePlus('getValue')
 
             params = $.extend({},
                 params, $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
