--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -6,10 +6,6 @@
     <link rel="stylesheet" th:href="@{/css/edit-table.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
     <style>
-        .form-control:disabled, .form-control[readonly] {
-            /*background: #fff;*/
-        }
-
         .operator-bar {
             position: fixed;
             bottom: 0;
@@ -85,30 +81,9 @@
 
         <div class="card">
             <div class="card-body">
-                <div id="table-container">
-                    <form class="form-item" id="form-item">
-                        <div class="table-fixed-container">
-                            <table class="table-thead table-editor table table-responsive-sm table-bordered table-sm">
-                                <thead>
-                                <tr>
-                                    <th style="width: 50px">序号</th>
-                                    <th style="width: 100px;"><label class="required">物料</label></th>
-                                    <th><label>描述</label></th>
-                                    <th style="width: 100px;"><label class="required">数量</label></th>
-                                    <th style="width: 100px;"><label>单位</label></th>
-                                    <th><label>备注</label></th>
-                                    <th style="width: 50px;"></th>
-                                </tr>
-                                </thead>
-                            </table>
-
-                            <table id="table" class="table-tbody table-editor table table-responsive-sm table-bordered table-sm">
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </form>
-                </div>
+                <form class="form-item" id="form-item">
+                    <div id="table-container"></div>
+                </form>
             </div>
         </div>
         <div id="dialogInput" style="display: none"></div>
@@ -123,10 +98,16 @@
     <script th:src="@{/plugins/bootstrap-datepicker/js/bootstrap-datepicker.zh-CN.min.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/jquery.form2json.js}"></script>
 
-    <script th:src="@{/js/jquery.dialogInput.js}"></script>
-    <script th:src="@{/js/jquery.table.js}"></script>
     <script th:src="@{/editable-table/editable-table.js}"></script>
+    <script th:src="@{/js/jquery.table.js}"></script>
+    <script th:src="@{/js/editable-table-plus.js}"></script>
+
+    <script th:src="@{/js/jquery.dialogInput.js}"></script>
+    <script th:src="@{/js/editable-table-plus-customize_type.js}"></script>
+
     <script>
+        var readonly = false
+
         let formOperator = document.getElementById('form-operator');
         let $operatorBar = $('#operator-bar')
         let $referenceCode = $('#referenceCode')
@@ -138,33 +119,53 @@
         let $operatorId = $('#operatorId')
         let $remark = $('#remark')
 
-        let editableTableIndex = 1
+        // 可编辑表格初始化
+        var $editableTable = $('#table-container').editableTablePlus({
+            customizeType,
+            showRowNumber: true, // 是否显示行号
+            readonly: readonly, // 只读
+            allowEmpty: false, // 表格允许为空
+            columnConfigs: [
+                {
+                    type: "material",
+                    name: "materialId",
+                    title: "物料",
+                    width: 100,
+                    required: true,
+                },
+                {
+                    type: "label",
+                    name: "materialText",
+                    title: "规格"
+                },
+                {
+                    type: "decimal",
+                    name: "quantity",
+                    title: "数量",
+                    width: 100,
+                    align: 'right',
+                    required: true,
+                },
+                {
+                    type: "text_label",
+                    name: "unit",
+                    title: "单位",
+                    width: 100,
+                    required: true,
+                    disabled: true
+                },
+                {
+                    type: "text",
+                    name: "remark",
+                    title: "备注"
+                },
+                {
+                    type: "hidden",
+                    name: "referenceItemId"
+                }
+            ]
+        })
 
-        let columnConfigs = [
-            {
-                type: "material_input",
-                name: "materialId",
-                required: true,
-            },
-            {
-                type: "label",
-                name: "materialText",
-            },
-            {
-                type: "number",
-                name: "quantity",
-                required: true,
-            },
-            {
-                type: "text-label",
-                name: "unit",
-                required: true,
-            },
-            {
-                type: "text",
-                name: "remark",
-            }
-        ]
 
         formOperator.addEventListener('submit', function (event) {
             execute()
@@ -187,6 +188,7 @@
             let selected = false
             for (let option of referenceTypeDom.options) {
                 option.hidden = true
+
                 for(let referenceType of selectMapping[select.value]) {
                     if (option.value === referenceType) {
                         option.hidden = false
@@ -215,7 +217,12 @@
             } else {
                 $operatorBar.show()
             }
+
+            type = select
             reset()
+            if (type.value === 'CANCEL' || type.value === 'DISPLAY' || type.value === 'RETURN') {
+                $editableTable.editableTablePlus('readonly', true)
+            }
         }
 
         function changeReferenceType(select) {
@@ -230,6 +237,9 @@
                 $("#form-item :input").prop("disabled", true);
             }
             reset()
+            if (type.value === 'CANCEL' || type.value === 'DISPLAY' || type.value === 'RETURN') {
+                $editableTable.editableTablePlus('readonly', true)
+            }
         }
         
         function execute() {
@@ -239,7 +249,7 @@
                 console.log(referenceTypeDom.value)
                 console.log($referenceCode.val())
                 $referenceCode.val($referenceCode.val().trim())
-                tableReset()
+                $editableTable.editableTablePlus('clear')
                 // ajax
                 $.get("/inventory/documents", {type: type.value, referenceType:referenceTypeDom.value, referenceCode: $referenceCode.val()},function (res) {
                     console.log(res)
@@ -251,40 +261,31 @@
                     $operatorId.val(res.operatorId)
                     $remark.val(res.remark)
 
-                    for (let item of res.itemList) {
-                        $editableTable.editableTable('addEmptyLine')
+                    $editableTable.editableTablePlus('setValue', res.itemList)
+                        .editableTablePlus('readonly', true)
 
-                        let $tr = $("#table tr:last-child").prev()
-                        $tr.find('td:last-child').append("<input type='hidden' name='referenceItemId'>")
-
-                        $tr.find("input[name]").each(function () {
-                            $(this).val(item[this.name])
-                        })
-
-                        // 其他值
-                        $tr.find('td:nth-child(5) input[type=text]').val(item.unitText)
+                    res.itemList.forEach((item, index) => {
+                        let $tr = $("#table-container tbody tr:nth-child("+(index + 1)+")")
                         // 出库入库
                         if (!(type.value === 'INBOUND' || type.value === 'OUTBOUND')) {
-                            $tr.find('td:nth-child(4)').css('position', 'relative').append("<span style='position: absolute;top: 5px;'>"+(item.movementType === 'OUTBOUND' ? '-' : '+')+"</span>")
+                            $tr.find('td:nth-child(4)').css('position', 'relative').append("<span style='position: absolute;top: 5px; right: 0;'>"+(item.movementType === 'OUTBOUND' ? '-' : '+')+"</span>")
                         }
-                    }
+                    })
 
                     if (type.value === 'DISPLAY') {
-                        $("form :input").prop("disabled", true);
-                        $referenceCode.prop("disabled", false);
-                        $execBtn.prop("disabled", false);
-                        $('#table .operator').hide()
+                        // $("form :input").prop("disabled", true);
+                        // $referenceCode.prop("disabled", false);
+                        // $execBtn.prop("disabled", false);
                     } else if (type.value === 'CANCEL') {
                         if (res.canceled) {
                             toastr.warning('物料凭证已经被取消了，不能重复取消!')
                         }
-                        $("form :input").prop("disabled", true);
-                        $('#table .operator').hide()
+                        // $("form :input").prop("disabled", true);
+                    } else if(type.value === 'RETURN') {
+                        // $("form.readonly :input").prop("disabled", true);
+                        $("#table-container table.table-tbody :input[name=quantity]").prop("disabled", false).prop('readonly', false)
                     } else {
-                        $("form.readonly :input").prop("disabled", true);
-                        $("#table tr :input").prop("disabled", true);
-
-                        $('#table tbody tr:not(:last-child) :nth-child(4) :input, #table tbody tr:not(:last-child) :nth-child(6) :input').prop("disabled", false);
+                        // $("form.readonly :input").prop("disabled", true);
                     }
                 }).fail(function(err) {
                     console.log(err.responseJSON)
@@ -293,8 +294,6 @@
         }
 
         // end
-        let dialogInput = $('#dialogInput');
-        var currentMaterialDom;
 
         $('#documentDate').datepicker({
             language: "zh-CN",
@@ -305,152 +304,6 @@
             format: 'yyyy-mm-dd'
         })
 
-        $('#table-container').table({fixedHead: true})
-        $('.tr-empty.non-data').remove()
-
-
-        var $editableTable = $('#table').editableTable({
-            columns: columnConfigs.length + 1,
-            addEmptyLineCallback: function ($tr) {
-                formatTr($tr)
-                rebuildIndex()
-            },
-            beforeRemoveCallback: function ($parent) {
-                // console.log($parent)
-                return true
-            },
-            afterRemoveCallback: function ($parent) {
-                // console.log($parent)
-                rebuildIndex()
-                return true
-            }
-        })
-
-        function formatTr($tr) {
-            for (let i = 0; i < columnConfigs.length; i++) {
-                let columnConfig = columnConfigs[i];
-                let childIndex = i + 2
-
-                if (columnConfig.type === 'material_input') {
-                    $tr.find('td:nth-child('+childIndex+') input')
-                        .attr('name', 'materialCode')
-                        .attr('readonly', false);
-                    $tr.find('td:nth-child('+childIndex+')').append('<input class="form-control" type="hidden" name="'+columnConfig.name+'">')
-                } else if (columnConfig.type === 'number') {
-                    $tr.find('td:nth-child('+childIndex+') input')
-                        // .attr('type', 'number')
-                        .attr('pattern', '^\\d+(\\.\\d{1,3})?$')
-                        .attr('title', '必须数字')
-                        .attr('name', columnConfig.name);
-                } else if (columnConfig.type === 'text-label') {
-                    $tr.find('td:nth-child('+childIndex+') input').attr('disabled', true).attr('readonly', true)
-                    $tr.find('td:nth-child('+childIndex+')').append('<input class="form-control" type="hidden" name="'+columnConfig.name+'">')
-                } else if (columnConfig.type === 'label') {
-                    $tr.find('td:nth-child('+childIndex+') input').attr('disabled', true).attr('readonly', true).attr('name', columnConfig.name)
-                } else if (columnConfig.type === 'text') {
-                        $tr.find('td:nth-child('+childIndex+') input').attr('name', columnConfig.name)
-                    }
-                }
-        }
-
-        function rebuildIndex() {
-            editableTableIndex = 1;
-            $('#table tbody tr').each(function () {
-                $(this).find('td:nth-child(1)').text(editableTableIndex++)
-            })
-
-            // 倒数第二个 设置 required
-            let $tr = $('#table tbody tr:last-child')
-            let $requiredTr = $tr.prev()
-            if ($requiredTr.length == 0) {
-                $requiredTr = $tr
-            }
-
-            for (let i = 0; i < columnConfigs.length; i++) {
-                let columnConfig = columnConfigs[i];
-                let childIndex = i + 2
-
-                if (columnConfig.required === true) {
-                    $requiredTr.find('td:nth-child('+childIndex+') input').attr('required', true)
-                }
-            }
-        }
-
-        $('#dialogInput').dialogInput({
-            title: '选择物料',
-            reportId: '697147523487240192',
-            labelDisplay: function (row) {
-                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
-            },
-            selected: function (row) {
-                console.log(row)
-                if ("createEvent" in document) {
-                    var evt = document.createEvent("HTMLEvents");
-                    evt.initEvent("input", false, true);
-                    currentMaterialDom.dispatchEvent(evt);
-                }
-                else
-                    currentMaterialDom.fireEvent("input");
-
-                currentMaterialDom.value = row.code
-                setCaretPosition(currentMaterialDom, currentMaterialDom.value.length)
-
-                $(currentMaterialDom).parent().next().find('input[type=text]').val(this.labelDisplay(row))
-
-                $(currentMaterialDom).parents('tr').find('td:nth-child(5) input[type=text]').val(row.base_unit_name)
-                $(currentMaterialDom).parents('tr').find('td:nth-child(5) input[type=hidden]').val(row.base_unit)
-
-                $(currentMaterialDom).siblings().val(row.id)
-            }
-        })
-
-        function setCaretPosition(ctrl, pos) {
-            // Modern browsers
-            if (ctrl.setSelectionRange) {
-                ctrl.focus();
-                ctrl.setSelectionRange(pos, pos);
-
-                // IE8 and below
-            } else if (ctrl.createTextRange) {
-                var range = ctrl.createTextRange();
-                range.collapse(true);
-                range.moveEnd('character', pos);
-                range.moveStart('character', pos);
-                range.select();
-            }
-        }
-
-        // 注册事件
-        (function () {
-            for (let i = 0; i < columnConfigs.length; i++) {
-                let columnConfig = columnConfigs[i];
-                let childIndex = i + 2
-
-                if (columnConfig.type === 'material_input') {
-                    $('#table tbody').delegate('td:nth-child('+childIndex+') input[type=text]', 'click keydown focus', function(event){
-                        // if ((event.keyCode && event.keyCode === 13) || !event.keyCode) {
-                        if ((event.keyCode && event.keyCode !== 9) || !event.keyCode) {
-                            dialogInput.click();
-                            currentMaterialDom = this
-                        }
-
-                        if (event.keyCode !== 9 ) {
-                            event.preventDefault();
-                            return;
-                        }
-                    })
-
-                } else if (columnConfig.type === 'number') {
-                    $('#table tbody').delegate('td:nth-child('+childIndex+') input[type=text]', 'keydown', function(event){
-                        if ((event.keyCode > 57 || event.keyCode < 48) && event.keyCode !== 8 && event.keyCode !== 190 && event.keyCode !== 39 && event.keyCode !== 37 && event.keyCode !== 9) {
-                            event.preventDefault();
-                            return;
-                        }
-                    })
-                }
-            }
-        })()
-
         function valid() {
             var formHeaderValidity = formHeader.checkValidity()
             var formItemValidity = formItem.checkValidity()
@@ -459,71 +312,33 @@
             return formHeaderValidity && formItemValidity;
         }
 
+        /**
+         * 重置可编辑状态
+         */
         function reset() {
             formHeader.classList.remove('was-validated')
             formItem.classList.remove('was-validated')
             formOperator.classList.remove('was-validated')
 
-            tableReset()
+            $editableTable.editableTablePlus('readonly', false)
+            $editableTable.editableTablePlus('clear')
 
             document.getElementById('referenceCode').value = ''
-            $("form.readonly :input").prop("disabled", false);
-            $("form-item #table tr:last-child").prop("disabled", false);
-        }
-
-        function tableReset() {
-            $('#table tbody tr:not(:last-child)').remove()
-            rebuildIndex()
+            // $("form.readonly :input").prop("disabled", false);
         }
 
         function send() {
-            var params = {}
-            var items = []
-            $('#table tbody tr:not(:last-child)').each(function () {
-                var row = {}
-                $(this).find('td input[name]').each(function () {
-                    row[$(this).attr('name')] = $(this).val()
-                })
-
-                // 处理material
-                if (!row.materialId) {
-                    $(this).siblings().val('')
-                }
-
-                // 如何全部为空删除该行
-                let allEmpty = true
-                for (const [key, value] of Object.entries(row)) {
-                    if (!!value) {
-                        allEmpty = false
-                        break
-                    }
-                }
-                if (allEmpty) {
-                    $(this).remove()
-                } else {
-                    items.push(row)
-                }
-                //end
-            })
-
-            rebuildIndex()
-
-            params['itemList'] = items
-
             if (!valid()) {
                 return
             }
 
-            if (items.length == 0) {
-                toastr.error('行项目缺少物料信息');
-                return;
-            }
-
-            params = $.extend({},
-                params, $('#form-operator').form2json({allowEmptyMultiVal:true}), $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
-
+            let params = $.extend({},
+                $('#form-operator').form2json({allowEmptyMultiVal:true}), $('#form-header').form2json({allowEmptyMultiVal:true})); //合并参数
+            params['itemList'] = $editableTable.editableTablePlus('getValue')
             console.log(params)
+
             params.code = '1' // 临时code
+
             $.ajax({
                 url: '/inventory',
                 type: "POST",
