refactor: code optimize

--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -114,7 +114,7 @@
                     name: "unit",
                     title: "单位",
                     width: 100,
-                    required: true,
+                    required: false,
                     disabled: true
                 },
                 {
