--- a/src/main/resources/templates/modules/partner.html
+++ b/src/main/resources/templates/modules/partner.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="container">
-    <sp:dict class="hidden" id="core_material_category"  key="core_material_category" emptyItemText/>
+    <sp:select  class="hidden" id="core_material_category"  key="core_material_category" emptyItemText/>
     <div id="dialogInput" style="display: none"></div>
     <div id="multipleDialogInput" style="display: none"></div>
     <form class="needs-validation dialog-form" th:classappend="${query.readonly == 'true' ? 'readonly' : ''}" id="695708313425285120" name="core_partner" novalidate>
