--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2">状态</label>
-                        <sp:dict id="status" name="status" key="produce_order_status" class="form-control" th:value="${po.status}" hideAllItem/>
+                        <sp:select  id="status" name="status" key="produce_order_status" class="form-control" th:value="${po.status}" hideAllItem/>
 <!--                        <select class="form-control" name="status">-->
 <!--                            <option value="PROCESSING" th:selected="${'PROCESSING' eq po.status.toString()}">进行中</option>-->
 <!--                            <option value="DONE" th:selected="${'DONE' eq po.status.toString()}">已完成</option>-->
