--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -40,11 +40,11 @@
                     <input id="code" type="hidden" name="code" th:value="${po.code == null ? '1' : po.code}">
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="partnerId">供应商</label>
-                        <sp:dict id="partnerId" name="partnerId" key="core_partner_vendor" th:value="${po.partnerId}" class="form-control" emptyItemText required/>
+                        <sp:select  id="partnerId" name="partnerId" key="core_partner_vendor" th:value="${po.partnerId}" class="form-control" emptyItemText required/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2" for="plantId">入库库房</label>
-                        <sp:dict id="plantId" name="plantId" key="core_plant" th:value="${po.plantId}" class="form-control" hideAllItem/>
+                        <sp:select  id="plantId" name="plantId" key="core_plant" th:value="${po.plantId}" class="form-control" hideAllItem/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="deliveryDate">交货日期</label>
