--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -268,7 +268,7 @@
         $('#dialogInputSingle').dialogInput({
             title: '选择物料',
             reportId: '697147523487240192',
-            params: "categoryId=717389543182962688",
+            params: {categoryId: "717389543182962688"},
             labelDisplay: function (row) {
                 return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
             },
@@ -297,7 +297,7 @@
         $('#dialogInput').dialogInput({
             title: '选择物料',
             reportId: '697147523487240192',
-            params: "categoryId=717389543182962688",
+            params: {categoryId: "717389543182962688"},
             mode: 'multiple', // 多选
             labelDisplay: function (row) {
                 return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
