--- a/src/main/resources/templates/modules/partner.html
+++ b/src/main/resources/templates/modules/partner.html
@@ -20,7 +20,8 @@
 </head>
 <body>
 <div class="container">
-    <sp:select  class="hidden" id="core_material_category"  key="core_material_category" emptyItemText/>
+<!--    <sp:select  class="hidden" id="core_material_category"  key="core_material_category" emptyItemText/>-->
+    <sp:select  class="hidden" id="core_material_category"  key="material_category_select_sql" emptyItemText group/>
     <div id="dialogInput" style="display: none"></div>
     <div id="multipleDialogInput" style="display: none"></div>
     <form class="needs-validation dialog-form" th:classappend="${query.readonly == 'true' ? 'readonly' : ''}" id="695708313425285120" name="core_partner" novalidate>
@@ -203,12 +204,13 @@
                 title: "分类",
                 required: true,
                 // disabled: true,
-                datasource: $('#core_material_category option').map((i,option) => {
-                    return {
-                        "name": option.value,
-                        "value": option.innerText
-                    }
-                }),
+                // datasource: $('#core_material_category option').map((i,option) => {
+                //     return {
+                //         "name": option.value,
+                //         "value": option.innerText
+                //     }
+                // }),
+                datasource: $('#core_material_category'),
                 onchange: function ($tr, value) {
                     // alert(value)
                     $tr.find(':input[name=materialId]').val('')
